# Lock

./: .gitignore  CONTRIBUTING.md  Justfile  LICENSE.txt  README.md  com.konstantintutsch.Lock.Devel.yaml  meson.build
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yaml
.github/workflows/: build.yaml  style.yaml
data/: com.konstantintutsch.Lock.desktop.in.in  com.konstantintutsch.Lock.gresource.xml.in  com.konstantintutsch.Lock.metainfo.xml.in.in  meson.build
data/ui/: encryptiondialog.blp  filerow.blp  keydialog.blp  keyrow.blp  managementdialog.blp  meson.build  selectiondialog.blp  shortcuts.blp  window.blp
po/: LINGUAS  POTFILES  bg.po  com.konstantintutsch.Lock.pot  cs.po  de.po  et.po  fa.po  fi.po  he.po  ia.po  it.po  kw.po  nn.po  oc.po  pl.po  ru.po  ta.po  tr.po  uk.po  zh_CN.po
src/: application.c  application.h  config.h.in  cryptography.c  cryptography.h  encryptiondialog.c  encryptiondialog.h  filerow.c  filerow.h  keydialog.c  keydialog.h  keyrow.c  keyrow.h  main.c  managementdialog.c  managementdialog.h  meson.build  selectiondialog.c  selectiondialog.h  text.c  text.h  threading.c  threading.h  window.c  window.h
